--- a/index.html
+++ b/index.html
@@ -1,44 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="./style.css">
-  <title>Rock, Paper, Scissors</title>
-</head>
-<body>
-  <section class="game">
-    <div class="score fadeOut">
-      <div class="player-score">
-        <h2>Player</h2>
-        <p>0</p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <title>Rock, Paper, Scissors</title>
+  </head>
+  <body>
+    <section class="game">
+      <div class="score fadeOut">
+        <div class="player-score">
+          <h2>Player</h2>
+          <p>0</p>
+        </div>
+        <div class="computer-score">
+          <h2>Computer</h2>
+          <p>0</p>
+        </div>
       </div>
-      <div class="computer-score">
-        <h2>Computer</h2>
-        <p>0</p>
-      </div>
-    </div>
 
-    <div class="intro">
-      <h1>Rock, Paper, Scissors</h1>
-      <input type="text" id="txtPlayerName" placeholder="Player">
-      <button>Let's Play</button>
-    </div>
+      <div class="intro">
+        <h1>Rock, Paper, Scissors</h1>
+        <input type="text" id="txtPlayerName" placeholder="Player" />
+        <button>Let's Play</button>
+      </div>
 
-    <div class="match fadeOut">
-      <h2 class="winner">Choose an option</h2>
-      <div class="hands">
-        <img src="./assets/rock.png" alt="" class="player-hand">
-        <img src="./assets/rock.png" alt="" class="computer-hand">
+      <div class="match fadeOut">
+        <h2 class="winner">Choose an option</h2>
+        <div class="hands">
+          <img src="./assets/rock.png" alt="" class="player-hand" />
+          <img src="./assets/rock.png" alt="" class="computer-hand" />
+        </div>
+        <div class="options">
+          <button class="rock">rock</button>
+          <button class="paper">paper</button>
+          <button class="scissors">scissors</button>
+        </div>
       </div>
-      <div class="options">
-        <button class="rock">rock</button>
-        <button class="paper">paper</button>
-        <button class="scissors">scissors</button>
-      </div>
-    </div>
-  </section>
-  <script src="./app.js"></script>
-</body>
+    </section>
+    <script src="./scripts/app.js"></script>
+  </body>
 </html>
